--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 <section id="servicios" class="reveal">
   <h2>Servicios</h2>
   <div class="services">
-    <div class="service" style="background-image: url('images/carteleras.jpg');"><h3>Carteleras Cinematográficas</h3><p>Historias visuales que capturan miradas y emociones.</p></div>
-    <div class="service" style="background-image: url('images/satiras.jpg');"><h3>Sátiras Políticas</h3><p>Ironía elegante y crítica inteligente.</p></div>
-    <div class="service" style="background-image: url('images/memes.jpg');"><h3>Memes Realistas</h3><p>Humor visualmente impecable.</p></div>
-    <div class="service" style="background-image: url('images/storytelling.jpg');"><h3>Storytelling para Marcas</h3><p>Relatos visuales que enamoran y venden.</p></div>
+    <div class="service" style="background-image: url('Images/carteleras.jpg');"><h3>Carteleras Cinematográficas</h3><p>Historias visuales que capturan miradas y emociones.</p></div>
+    <div class="service" style="background-image: url('Images/satiras.jpg');"><h3>Sátiras Políticas</h3><p>Ironía elegante y crítica inteligente.</p></div>
+    <div class="service" style="background-image: url('Images/memes.jpg');"><h3>Memes Realistas</h3><p>Humor visualmente impecable.</p></div>
+    <div class="service" style="background-image: url('Images/storytelling.jpg');"><h3>Storytelling para Marcas</h3><p>Relatos visuales que enamoran y venden.</p></div>
   </div>
 </section>
 
@@ -75,13 +75,13 @@
   <h2>Portafolio</h2>
   <div class="carousel">
     <div class="carousel-track">
-      <img src="images/img1.jpg" alt="Proyecto 1">
-      <img src="images/img2.jpg" alt="Proyecto 2">
-      <img src="images/img3.jpg" alt="Proyecto 3">
-      <img src="images/img4.jpg" alt="Proyecto 4">
-      <img src="images/img5.jpg" alt="Proyecto 5">
-      <img src="images/img6.jpg" alt="Proyecto 6">
-      <img src="images/img7.jpg" alt="Proyecto 7">
+      <img src="Images/img1.jpg" alt="Proyecto 1">
+      <img src="Images/img2.jpg" alt="Proyecto 2">
+      <img src="Images/img3.jpg" alt="Proyecto 3">
+      <img src="Images/img4.jpg" alt="Proyecto 4">
+      <img src="Images/img5.jpg" alt="Proyecto 5">
+      <img src="Images/img6.jpg" alt="Proyecto 6">
+      <img src="Images/img7.jpg" alt="Proyecto 7">
     </div>
   </div>
 </section>
