Corrijo todas rutas a images minúscula para Netlify

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <title>KREO IA Studio</title>
   <style>
     body { margin: 0; font-family: Arial, sans-serif; background: #000; color: #fff; scroll-behavior: smooth; }
-    header { background: url('Images/fondo-soñado.jpg') center/cover no-repeat; background-attachment: fixed; text-align: center; padding: 100px 20px; }
+    header { background: url('images/fondo-soñado.jpg') center/cover no-repeat; background-attachment: fixed; text-align: center; padding: 100px 20px; }
     header h1 { font-size: 3em; margin-bottom: 0.5em; }
     header p { font-size: 1.2em; max-width: 600px; margin: 0 auto; }
     nav { text-align: center; margin: 40px 0; display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; }
@@ -64,10 +64,10 @@
 <section id="servicios" class="reveal">
   <h2>Servicios</h2>
   <div class="services">
-    <div class="service" style="background-image: url('Images/carteleras.jpg');"><h3>Carteleras Cinematográficas</h3><p>Historias visuales que capturan miradas y emociones.</p></div>
-    <div class="service" style="background-image: url('Images/satiras.jpg');"><h3>Sátiras Políticas</h3><p>Ironía elegante y crítica inteligente.</p></div>
-    <div class="service" style="background-image: url('Images/memes.jpg');"><h3>Memes Realistas</h3><p>Humor visualmente impecable.</p></div>
-    <div class="service" style="background-image: url('Images/storytelling.jpg');"><h3>Storytelling para Marcas</h3><p>Relatos visuales que enamoran y venden.</p></div>
+    <div class="service" style="background-image: url('images/carteleras.jpg');"><h3>Carteleras Cinematográficas</h3><p>Historias visuales que capturan miradas y emociones.</p></div>
+    <div class="service" style="background-image: url('images/satiras.jpg');"><h3>Sátiras Políticas</h3><p>Ironía elegante y crítica inteligente.</p></div>
+    <div class="service" style="background-image: url('images/memes.jpg');"><h3>Memes Realistas</h3><p>Humor visualmente impecable.</p></div>
+    <div class="service" style="background-image: url('images/storytelling.jpg');"><h3>Storytelling para Marcas</h3><p>Relatos visuales que enamoran y venden.</p></div>
   </div>
 </section>
 
@@ -75,13 +75,13 @@
   <h2>Portafolio</h2>
   <div class="carousel">
     <div class="carousel-track">
-      <img src="Images/img1.jpg" alt="Proyecto 1">
-      <img src="Images/img2.jpg" alt="Proyecto 2">
-      <img src="Images/img3.jpg" alt="Proyecto 3">
-      <img src="Images/img4.jpg" alt="Proyecto 4">
-      <img src="Images/img5.jpg" alt="Proyecto 5">
-      <img src="Images/img6.jpg" alt="Proyecto 6">
-      <img src="Images/img7.jpg" alt="Proyecto 7">
+      <img src="images/img1.jpg" alt="Proyecto 1">
+      <img src="images/img2.jpg" alt="Proyecto 2">
+      <img src="images/img3.jpg" alt="Proyecto 3">
+      <img src="images/img4.jpg" alt="Proyecto 4">
+      <img src="images/img5.jpg" alt="Proyecto 5">
+      <img src="images/img6.jpg" alt="Proyecto 6">
+      <img src="images/img7.jpg" alt="Proyecto 7">
     </div>
   </div>
 </section>
