--- a/index.html
+++ b/index.html
@@ -75,16 +75,17 @@
   <h2>Portafolio</h2>
   <div class="carousel">
     <div class="carousel-track">
-      <img src="images/img1.jpg" alt="Proyecto 1">
-      <img src="images/img2.jpg" alt="Proyecto 2">
-      <img src="images/img3.jpg" alt="Proyecto 3">
-      <img src="images/img4.jpg" alt="Proyecto 4">
-      <img src="images/img5.jpg" alt="Proyecto 5">
-      <img src="images/img6.jpg" alt="Proyecto 6">
-      <img src="images/img7.jpg" alt="Proyecto 7">
+      <img src="images/img1_v1.jpg" alt="Proyecto 1">
+      <img src="images/img2_v1.jpg" alt="Proyecto 2">
+      <img src="images/img3_v1.jpg" alt="Proyecto 3">
+      <img src="images/img4_v1.jpg" alt="Proyecto 4">
+      <img src="images/img5_v1.jpg" alt="Proyecto 5">
+      <img src="images/img6_v1.jpg" alt="Proyecto 6">
+      <img src="images/img7_v1.jpg" alt="Proyecto 7">
     </div>
   </div>
 </section>
+
 
 <section id="contacto" class="reveal">
   <h2>Contacto</h2>
